<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="adicao">\u002B</string>
    <string name="subtracao">\u2212</string>
    <string name="multiplicacao">\u00D7</string>
    <string name="division">\u00F7</string>
    <string name="equals">\u003D</string>
    <string name="decimal_ponto">,</string>
    <string name="plus_minus">\u00B1</string>
    <string name="percentage">\u0025</string>
    <string name="all_clear">AC</string>

    <string-array name="currencies">
        <item>INR</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>ZAR</item>
        <item>NZD</item>
        <item>JPY</item>
        <item>SGD</item>
        <item>CNY</item>
        <item>CHF</item>
        <item>MYR</item>
        <item>HUF</item>
        <item>HKD</item>
        <item>THB</item>
        <item>KRW</item>
        <item>SEK</item>
        <item>PHP</item>
        <item>ILS</item>
        <item>TRY</item>
        <item>PLN</item>
        <item>MXN</item>
        <item>NOK</item>
        <item>DKK</item>
        <item>BRL</item>
        <item>IDR</item>
        <item>IDR</item>
        <item>CZK</item>
        <item>RUB</item>
        <item>RON</item>
        <item>BGN</item>
        <item>ISK</item>

    </string-array>

    <string-array name="currencies2">
        <item>USD</item>
        <item>INR</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>ZAR</item>
        <item>NZD</item>
        <item>JPY</item>
        <item>SGD</item>
        <item>CNY</item>
        <item>CHF</item>
        <item>MYR</item>
        <item>HUF</item>
        <item>HKD</item>
        <item>THB</item>
        <item>KRW</item>
        <item>SEK</item>
        <item>PHP</item>
        <item>ILS</item>
        <item>TRY</item>
        <item>PLN</item>
        <item>MXN</item>
        <item>NOK</item>
        <item>DKK</item>
        <item>BRL</item>
        <item>IDR</item>
        <item>IDR</item>
        <item>CZK</item>
        <item>RUB</item>
        <item>RON</item>
        <item>BGN</item>
        <item>ISK</item>

    </string-array>


</resources>